replaces isBlank method with .trim .isempty method to work with java 7